--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,35 +1,28 @@
-name: Rust
+name: Build and Test
 
 on:
   push:
-    branches: [main]
+    branches: [ "main" ]
   pull_request:
-    branches: [main]
+    branches: [ "main" ]
+
+env:
+  CARGO_TERM_COLOR: always
+  RUSTFLAGS: "-Dwarnings"
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        rust-version: [stable, beta]
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+    - name: Build
+      run: cargo build --release --verbose
+    - name: Run tests
+      run: cargo test --release --verbose
 
-      - name: Set up Rust
-        uses: actions/setup-rust@v1
-        with:
-          rust-version: ${{ matrix.rust-version }}
-
-      - name: Install Clippy
-        run: rustup component add clippy
-
+  clippy_check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
       - name: Run Clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings -D clippy::all
-
-      - name: Build with Cargo
-        run: cargo build --verbose
-
-      - name: Run tests
-        run: cargo test --verbose
+        run: cargo clippy --all-targets --all-features -- -D clippy::all -W clippy::pedantic -W clippy::nursery -A clippy::missing_panics_doc
